HSEARCH-4469 Test against OpenJDK 19 in Jenkinsfile