@@ -2426,6 +2426,27 @@
         </profile>
 
         <profile>
+            <id>testWithJdk19</id>
+            <activation>
+                <property>
+                    <name>java-version.test.release</name>
+                    <value>19</value>
+                </property>
+            </activation>
+            <properties>
+                <!-- ForbiddenAPIs doesn't provide bundled signatures for JDK19 yet. -->
+                <forbiddenapis.skip>true</forbiddenapis.skip>
+                <!-- We need net.bytebuddy.experimental=true to make BytecodeEnhancementIT and mockito-based tests pass -->
+                <surefire.jvm.args.java-version>
+                    -Djdk.attach.allowAttachSelf=true
+                    -Dnet.bytebuddy.experimental=true
+                </surefire.jvm.args.java-version>
+                <!-- Spring isn't ready for JDK19 yet -->
+                <failsafe.spring.skip>true</failsafe.spring.skip>
+            </properties>
+        </profile>
+
+        <profile>
             <id>compiler-eclipse</id>
             <build>
                 <pluginManagement>
